--- a/src/i18n/en_GB/common.json
+++ b/src/i18n/en_GB/common.json
@@ -15,46 +15,21 @@
         "arLanguage": "Arabic",
         "toggleTheme": "Toggle Theme"
     },
-    "blockScreen": {
-        "blockTitle": "Blocks",
-        "sender": "Sender",
-        "blockId": "Block ID",
-        "blockHeight": "height",
-        "blockVersion": "version",
-        "blockTransactionRoot": "transaction Root",
-        "blockAssertRoot": "Assert Root",
-        "previousBlockId": "Previous Block",
-        "blockTransactionNumber": "Tr Number",
-        "blockNumberOfAssets": "Nb of Assets",
-        "blockNumberOfEvents": "nb of Events",
-        "blockTime": "Time",
-        "blockInfo": "Block Info",
-        "blockSignature": "Signature",
-        "blockGenerator": "Generator",
-        "blockGeneratorAddress": "Address",
-        "blockGeneratorName": "Name",
-        "blockGeneratorPublicKey": "Public Key"
+    "propertyScreen": {
+        "propertyTitle": "Properties",
+        "property": {
+            "details": "Details",
+            "title": "Title",
+            "price": "Price",
+            "address": "Address",
+            "bedrooms": "Bedrooms",
+            "bathrooms": "Bathrooms",
+            "size": "Size",
+            "status": "Status",
+            "description": "Description"
+        }
     },
-    "transactionsScreen": {
-        "transactionTitle": "Transactions",
-        "sender": "Sender",
-        "textCopier": "The TransactionID has been copied",
-        "transactionInfo": "Transaction Info",
-        "feeAmount": "Fee Amount",
-        "minFee": "Minimum Fee",
-        "sizeBlock": "Block Size",
-        "metaData": "Block Meta Data",
-        "blockId": "Block ID",
-        "blockInfo": "Block Info ",
-        "blockHeight": "Block Info",
-        "blockTimestamp": "Block Timestamp",
-        "sendInformation": "Sender Information",
-        "transactionAddress": "Transaction Address",
-        "transactionName": "Transaction Name",
-        "transactionPublicKey": "Transaction Public Key",
-        "metaInfo": "Transaction Meta Info",
-        "metaAmount": "Transaction Amount",
-        "metaRecipientAddress": "Transaction Recipient address",
-        "metaTokenId": "Transaction Token Id"
+    "likedPropertyScreen": {
+        "likedPropertyTitle": "Liked Properties"
     }
 }
