--- a/src/i18n/fr_FR/common.json
+++ b/src/i18n/fr_FR/common.json
@@ -14,30 +14,20 @@
         "arLanguage": "Arabe",
         "toggleTheme": "Changez le theme"
     },
-    "blockScreen": {
-        "blockTitle": "Bloques",
-        "sender": "Sender"
+    "propertyScreen": {
+        "property": {
+            "details": "Details",
+            "title": "Titre",
+            "price": "Prix",
+            "address": "Adresse",
+            "bedrooms": "Chambres",
+            "bathrooms": "Salles de bain",
+            "size": "Taille",
+            "status": "Statut",
+            "description": "Description"
+        }
     },
-    "transactionsScreen": {
-        "transactionTitle": "Transactions",
-        "sender": "Sender",
-        "textCopier": "The TransactionID has been copied",
-        "transactionInfo": "Transaction Info",
-        "feeAmount": "Fee Amount",
-        "minFee": "Minimum Fee",
-        "sizeBlock": "Block Size",
-        "metaData": "Block Meta Data",
-        "blockId": "Block ID",
-        "blockInfo": "Block Info ",
-        "blockHeight": "Block Info",
-        "blockTimestamp": "Block Timestamp",
-        "sendInformation": "Sender Information",
-        "transactionAddress": "Transaction Address",
-        "transactionName": "Transaction Name",
-        "transactionPublicKey": "Transaction Public Key",
-        "metaInfo": "Transaction Meta Info",
-        "metaAmount": "Transaction Amount",
-        "metaRecipientAddress": "Transaction Recipient address",
-        "metaTokenId": "Transaction Token Id"
+    "likedPropertyScreen": {
+        "likedPropertyTitle": "Proprietes preferees"
     }
 }
