--- a/src/i18n/ar_SA/common.json
+++ b/src/i18n/ar_SA/common.json
@@ -16,6 +16,7 @@
         "toggleTheme": "تبديل الموضوع"
     },
     "propertyScreen": {
+        "propertyTitle": "الممتلكات",
         "property": {
             "details": "التفاصيل",
             "title": "العنوان",
